       a row or column
         warning("found nonfinite values on row|column=",i," in grid derivative")
       The author has encountered one data set that produces NaN on two rows and
       trying to understand how and why this is happening.
10. Extended the EMPIRcop() with a checker-board empirical copula, which is a type
       of light smooth and adapted from the copula package.


POTENTIAL TODOs:

Continued inspection of the approx() use and whether ties="ordered" can be used
(see Version 2.1.3#6), it appears in all other cases that yes, we can move
to the ties="ordered" because the inversion of the gridded derivative of the empirical 
copula is being used and structurally the "x" part of the approx will be ordered.
R/EMPIRsim.R:      v <- approx(cols, y=v.available, xout=t, rule=2)$y
R/EMPIRsim.R:      v1 <- approx(cols, y=v.available1, xout=t, rule=2)$y
R/EMPIRsim.R:      v2 <- approx(cols, y=v.available2, xout=t, rule=2)$y
R/EMPIRsimv.R:      v <- approx(cols, y=v.available, xout=t, rule=2)$y
R/EMPIRsimv.R:      v1 <- approx(cols, y=v.available1, xout=t, rule=2)$y
R/EMPIRsimv.R:      v2 <- approx(cols, y=v.available2, xout=t, rule=2)$y
R/kfuncCOP.R:         empkc <- approx(c(0,FKin,1), c(0,Zin,1), xout=z)$y


lcomCOPpv() <--> vuongCOP() work as now lcomCOP() is available.
lcomCOPpv() might need some reworking too.

If two-parameter Galambos (Joe, 2014, p. 198) is not materially broader than
the one-parameter, does this hold for a two-parameter Gumbel hinted by
Joe (2014, p. 199)? Further investigation is needed.

Note: Joe's 2-p GHcop does appear different from Brahimi et. al (2015) version
of a 2-p GHcop. Should support for both be made? Are both the same? (Quick testing suggests that perhaps they are not, but mathematical checking has not been made [01/09/2019]).

Add the trimmed L-comoments? 

\author{William Asquith \email{william.asquith@ttu.edu} }
  Make such conversions throughout or go back to W.H. Asquith?
